Fri Apr 22 20:23:06 EEST 2005  Pekka Riikonen <priikone@silcnet.org>

	* Various 'cat' optimizations.

	* More test cases in tests/.

Tue Apr 19 17:12:09 EEST 2005  Pekka Riikonen <priikone@silcnet.org>

	* Remove extra ' ' and '\t' when joining backslashed lines.

	* Fixed argument delivery to hook scripts.

Mon Apr 18 21:05:42 EEST 2005  Pekka Riikonen <priikone@silcnet.org>

	* Process '*.ad' files before calling autoconf and automake.

	* Various shell compatibility kludges added.

Mon Apr 18 20:06:24 EEST 2005  Pekka Riikonen <priikone@silcnet.org>

	* Autodist 1.1.

	* All 'local' variables must be at the start of function for
	  compatibility.

Sun Apr 17 20:08:28 EEST 2005  Pekka Riikonen <priikone@silcnet.org>

	* Added TODO.

	* Added pre-process-dist-hook and post-process-dist-hook.

	* Added autodist.1.

Sun Apr 16 23:00:02 EEST 2005  Pekka Riikonen <priikone@silcnet.org>

	* First release, Autodist 1.0.