@@ -474,18 +474,6 @@ ad_process_ads()
   do
     fname=`echo $i | sed s/\.ad//`
 
-    # Header
-  cat > $fname <<EOF
-# Automatically generated by Autodist $ver.  Do not edit.
-# To make changes edit the $i file in the source tree.
-
-# Source: $i
-# Generated: `date` by `whoami`
-# Distribution: $distribution
-# License: $license
-
-EOF
-
     # Run the distribution processing for this file
     ad_debug "Processing $i to be $fname"
     ad_process_file $i $fname
